# ResearchAssistantMCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-protocol-based-abstractions.md  0002-citation-assistant-protocols.md
examples/: claude_desktop_config.json  orchestrator_demo.py
src/research_mcp/: __init__.py  _env.py  cli.py  errors.py  repl.py
src/research_mcp/chunker/: __init__.py  _text.py  fake.py  section_aware.py  simple.py
src/research_mcp/citation/: __init__.py  _format.py  ama.py  apa.py  bibtex.py  chicago.py  mla.py  registry.py
src/research_mcp/citation_scorer/: __init__.py  _author.py  _field.py  _field_params.py  _llm_schema.py  _venues.py  anthropic_llm.py  fake.py  field_aware.py  heuristic.py  openai_llm.py
src/research_mcp/claim_extractor/: __init__.py  _llm_schema.py  _patterns.py  anthropic_extractor.py  fake.py  openai_extractor.py  spacy_extractor.py
src/research_mcp/domain/: __init__.py  chunker.py  citation.py  citation_scorer.py  claim.py  embedder.py  index.py  paper.py  paper_analyzer.py  query.py  reranker.py  source.py
src/research_mcp/embedder/: __init__.py  fake.py  openai_embedder.py  sentence_transformers_embedder.py
src/research_mcp/index/: __init__.py  _codec.py  faiss_index.py  memory_index.py
tests/: conftest.py
tests/e2e/: test_mcp_stdio.py
tests/integration/: test_arxiv.py  test_llm_citation_scorer.py  test_llm_claim_extractor.py  test_openalex.py  test_pubmed.py
tests/unit/: test_adaptive_rate_limit.py  test_arxiv.py  test_backoff.py  test_chunker.py  test_citation_scorer.py  test_citation_scorer_llm.py  test_citation_service.py  test_claim_extractor.py  test_discovery_service.py  test_draft_service.py  test_embedder_selection.py  test_env_loader.py  test_faiss_hnsw.py  test_faiss_index.py  test_fake_embedder.py  test_field_aware_scorer.py  test_h_index.py  test_hf_cross_encoder_reranker.py  test_library_service.py  test_llm_claim_extractor.py  test_mcp_tools.py  test_memory_index.py  test_openai_embedder.py  test_openalex.py  test_paper.py  test_paper_analyzer.py  test_pubmed.py  test_reranker.py  test_reranker_lazy_load.py  test_search_query.py  test_search_service.py  test_sentence_transformers_embedder.py  test_tool_logging.py
(+32 files in other folders)
