[project]
name = "research-mcp"
version = "0.1.0"
description = "MCP server for research workflows: search arXiv and Semantic Scholar, build a local FAISS library, generate citations."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "David Burton", email = "david@databurton.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "research",
    "arxiv",
    "semantic-scholar",
    "rag",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "openai>=1.30",
    "click>=8.1",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipython>=8.20",
]
sentence-transformers = ["sentence-transformers>=2.7"]
claim-extraction = ["spacy>=3.7"]
paper-analysis = ["anthropic>=0.40"]

[project.scripts]
research-mcp = "research_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/burton-david/research-mcp"
Repository = "https://github.com/burton-david/research-mcp"
Issues = "https://github.com/burton-david/research-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests that do not hit the network",
    "integration: tests that hit real arXiv / Semantic Scholar (gated by RESEARCH_MCP_INTEGRATION=1)",
    "e2e: end-to-end MCP server boot tests",
]
